src/test/ui/dst/dst-rvalue.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/dst-rvalue.rs:6:28
   |
LL |     let _x: Box<str> = box *"hello world";
   |                            ^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: the type of a box expression must have a statically known size

error[E0277]: the size for values of type `[isize]` cannot be known at compilation time
  --> $DIR/dst-rvalue.rs:10:32
   |
LL |     let _x: Box<[isize]> = box *array;
   |                                ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[isize]`
   = note: the type of a box expression must have a statically known size

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
